# cookiecutter-django

./: .pre-commit-config.yaml  pyproject.toml
conda/: base.yaml
{{cookiecutter.project_slug}}/: .releaserc.json  README.md
